# ICAP_2025_GeophPy

./: .gitignore  AUTHORS.rst  CHANGES.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yml  static.yml  statics.yml
docs/: .gitignore  Makefile  make.bat  requirements.txt
docs/_templates/: sidebarintro.html
docs/source/: about.rst  api.rst  changes.rst  conf.py  feedback.rst  gen-proc.rst  geopos.rst  gui.rst  index.rst  install.rst  mag-proc.rst  plot-fun.rst  quick-start.rst  references.rst
geophpy/: __config__.py  __init__.py
geophpy/core/: __init__.py  arithmetic.py  ascii.py  datastructures.py  grd.py  info.py  io.py  json.py  operation.py  processing.py  reader.py  registry.py  spatial.py  spectral.py  stats.py  survey.py  utils.py
geophpy/electrical_mapping/: __init__.py  io.py  processing.py
geophpy/emi/: __init__.py  io.py  json.py  operation.py  processing.py
geophpy/emi/__FORTRAN__/: _boule_.cfg  _config_.cfg  boule.out  terrainhom.out
geophpy/emi/__JSON__/: Appareils.json
geophpy/georeferencing/: __init__.py  crs.py  kml.py  raster.py  transform.py  utils.py
geophpy/mag/: __init__.py  plot.py  processing.py  uxo.py
geophpy/magnetic_susceptibility/: __init__.py  io.py  processing.py
geophpy/seismic/: __init__.py  inversion.py  io.py  processing.py
geophpy/visualization/: __init__.py  colormap.py  correlation.py  decorators.py  destriping.py  heatmap.py  helpers.py  histo.py  plot.py  plot2D.py  plot3D.py  spectral.py  track.py
notebooks/: 01_Basic_Workflow.ipynb  02_Basic_Operations.ipynb  03_Advanced_Processing.ipynb  04_Magnetic_Processing.ipynb  Geophpy-dev-install.md  ICAP2025_WORKSHOP_GEOPHPY_PLAN.md
tests/: conftest.py  test_arithmetic.py  test_info.py  test_spatial.py  test_stats.py
